--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "dom": "^0.0.3",
-    "react-router": "^6.22.3"
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3"
   }
 }
