--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "dom": "^0.0.3",
+    "gh-pages": "^6.1.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3"
   }
